[package]
name = "cli-clock"
description="cli clock/stopwacth"
version = "0.1.0"
edition = "2021"
authors = ["Archerymystery <archerymystery@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Archerymystery/cli-clock.git"
license-file = "LICENSE"
keywords = ["stopwatch", "clock"]
[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
colors-transform = "0.2.11"
termion = "4.0.2"
